2006-03-04  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.h
	(mono_debugger_create_notification_function): Allocate memory at
	runtime and return a pointer to it.

2006-03-03  Zoltan Varga  <vargaz@gmail.com>

	* assembly.c: Fix windows build.
	
	* assembly.c: Fix build.

	* assembly.c: Move the contents of os/{unix,win32}/util.c to this file.	

	* gc_wrapper.h: Move the contents of os/gc_wrapper.h to this file.
	
2006-03-03  Dick Porter  <dick@ximian.com>

	* process.c
	(ves_icall_System_Diagnostics_Process_ShellExecuteEx_internal):
	Check parameters before dereferencing them.  Fixes Aaron's part of
	bug 77393.

2006-03-03  Raja R Harinath  <rharinath@novell.com>

	Fix performance regression.
	* loader.c (find_method_in_class): Add 'from_class' argument.
	Rename 'klass' argument to 'in_class'.	The signature is compared
	against the method in 'in_class', and the corresponding method is
	returned from 'from_class'.
	(find_method): Walk both 'in_class' and 'from_class' in parallel.
	(method_from_memberref) [PARENT_TYPESPEC]: Use it to walk the
	type definition and generic instantiation in parallel.
	(mono_get_method_constrained): Update to changes.

Thu Mar 2 12:27:41 CET 2006 Paolo Molaro <lupus@ximian.com>

	* threads.c: make sure the domain is correct, too when doing
	mono_thread_attach ().

2006-03-01  Zoltan Varga  <vargaz@gmail.com>

	* class.c (mono_class_create_from_typedef): Mark classes using CharSet.Auto as unicode on
	windows. Fixes #77683.

Wed Mar 1 20:09:25 CET 2006 Paolo Molaro <lupus@ximian.com>

	* object.h, *: introduced specific way to set elements of an array
	of references to be used as write barrier. Still need to audit the
	uses of mono_array_addr.

2006-03-01  Miguel de Icaza  <miguel@novell.com>

	* object-internals.h: New field to cache the assmebly name, patch
	from Tambet Ingo (tambet@ximian.com)

Wed Mar 1 19:13:30 CET 2006 Paolo Molaro <lupus@ximian.com>

	* decimal.h, class-internals.h, metadata-internals.h,