@@ -400,7 +400,6 @@ struct _MonoInflatedGenericClass {
  */
 struct _MonoDynamicGenericClass {
 	MonoInflatedGenericClass generic_class;
-	MonoType *parent;
 	int count_methods;
 	MonoMethod **methods;
 	int count_ctors;
